clusters/k3s-cluster/static-files/static-files-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: static
---
apiVersion: v1
kind: Service
metadata:
  name: static-svc
  namespace: static
spec:
  type: ClusterIP
  ports:
    - port: 18007
      targetPort: 18007
---
apiVersion: v1
kind: Endpoints
metadata:
  name: static-endpoint
  namespace: static
subsets:
  - addresses:
      - ip: 192.168.1.34
    ports:
      - port: 18007
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: static-ingress
  namespace: static
  labels:
    name: static-ingress
spec:
  rules:
    - host: static.jacobbanghart.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: static-svc
                port:
                  number: 18007
